--- a/nextrole-backend/package.json
+++ b/nextrole-backend/package.json
@@ -1,12 +1,19 @@
 {
   "devDependencies": {
     "nodemon": "^3.1.9"
-  }
+  },
   "scripts": {
-  "dev": "next dev -p 5000",
-  "build": "next build",
-  "start": "next start -p 5000",
-  "lint": "next lint"
-}
-
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "next build",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "formidable": "^3.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "next-connect": "^1.0.0",
+    "nodemailer": "^6.10.1"
+  }
 }
